--- a/src/AutoTrader/AutoTrader.vcxproj.filters
+++ b/src/AutoTrader/AutoTrader.vcxproj.filters
@@ -105,6 +105,9 @@
     <ClInclude Include="AccountMgr.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="LoadStrategies.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
