--- a/src/StrategyFramework/StrategyFramework.vcxproj.filters
+++ b/src/StrategyFramework/StrategyFramework.vcxproj.filters
@@ -13,122 +13,56 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="Header Files\Strategy">
-      <UniqueIdentifier>{35c42684-250a-4b2f-8470-de6127a8e044}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Strategy">
-      <UniqueIdentifier>{5159760c-4ba2-4570-8dd1-92fd70a1b184}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\Tech">
-      <UniqueIdentifier>{83624b9e-1e0f-4d88-bd55-c49803e1dbcf}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Tech">
-      <UniqueIdentifier>{c5639523-d813-4ac8-af14-7dab4752c580}</UniqueIdentifier>
-    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="AMACrossStratgy.h">
-      <Filter>Header Files\Strategy</Filter>
-    </ClInclude>
-    <ClInclude Include="EMACrossStratgy.h">
-      <Filter>Header Files\Strategy</Filter>
-    </ClInclude>
-    <ClInclude Include="IPositionControl.h">
-      <Filter>Header Files\Strategy</Filter>
-    </ClInclude>
-    <ClInclude Include="MACrossBOLLStrategy.h">
-      <Filter>Header Files\Strategy</Filter>
-    </ClInclude>
-    <ClInclude Include="MACrossStratgy.h">
-      <Filter>Header Files\Strategy</Filter>
-    </ClInclude>
-    <ClInclude Include="OrderTrigger.h">
-      <Filter>Header Files\Strategy</Filter>
-    </ClInclude>
-    <ClInclude Include="TriggerFactory.h">
-      <Filter>Header Files\Strategy</Filter>
-    </ClInclude>
-    <ClInclude Include="WMACrossStratgy.h">
-      <Filter>Header Files\Strategy</Filter>
-    </ClInclude>
-    <ClInclude Include="BOLLTech.h">
-      <Filter>Header Files\Tech</Filter>
-    </ClInclude>
-    <ClInclude Include="KData.h">
-      <Filter>Header Files\Tech</Filter>
-    </ClInclude>
-    <ClInclude Include="MACrossBOLLTech.h">
-      <Filter>Header Files\Tech</Filter>
-    </ClInclude>
-    <ClInclude Include="MATech.h">
-      <Filter>Header Files\Tech</Filter>
-    </ClInclude>
-    <ClInclude Include="TechVec.h">
-      <Filter>Header Files\Tech</Filter>
-    </ClInclude>
-    <ClInclude Include="TickWrapper.h">
-      <Filter>Header Files\Tech</Filter>
-    </ClInclude>
-    <ClInclude Include="TechUtils.h">
-      <Filter>Header Files\Tech</Filter>
-    </ClInclude>
-    <ClInclude Include="AP_Mgr.h">
-      <Filter>Header Files\Strategy</Filter>
-    </ClInclude>
     <ClInclude Include="Order.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Strategy.h">
-      <Filter>Header Files\Strategy</Filter>
+    <ClInclude Include="TickWrapper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AP_Mgr.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="OrderTrigger.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="stdafx.h">
-      <Filter>Header Files\Strategy</Filter>
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Strategy.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TriggerFactory.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BOLLTech.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="KData.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TechVec.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="WMACrossStratgy.cpp">
-      <Filter>Source Files\Strategy</Filter>
-    </ClCompile>
-    <ClCompile Include="TriggerFactory.cpp">
-      <Filter>Source Files\Strategy</Filter>
-    </ClCompile>
-    <ClCompile Include="PositionControl.cpp">
-      <Filter>Source Files\Strategy</Filter>
-    </ClCompile>
-    <ClCompile Include="MACrossStratgy.cpp">
-      <Filter>Source Files\Strategy</Filter>
-    </ClCompile>
-    <ClCompile Include="MACrossBOLLStrategy.cpp">
-      <Filter>Source Files\Strategy</Filter>
-    </ClCompile>
-    <ClCompile Include="EMACrossStratgy.cpp">
-      <Filter>Source Files\Strategy</Filter>
-    </ClCompile>
-    <ClCompile Include="AMACrossStratgy.cpp">
-      <Filter>Source Files\Strategy</Filter>
-    </ClCompile>
-    <ClCompile Include="TickWrapper.cpp">
-      <Filter>Source Files\Tech</Filter>
-    </ClCompile>
-    <ClCompile Include="TechUtils.cpp">
-      <Filter>Source Files\Tech</Filter>
-    </ClCompile>
-    <ClCompile Include="MATech.cpp">
-      <Filter>Source Files\Tech</Filter>
-    </ClCompile>
-    <ClCompile Include="MACrossBOLLTech.cpp">
-      <Filter>Source Files\Tech</Filter>
-    </ClCompile>
-    <ClCompile Include="KData.cpp">
-      <Filter>Source Files\Tech</Filter>
+    <ClCompile Include="Order.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="BOLLTech.cpp">
-      <Filter>Source Files\Tech</Filter>
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="KData.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TickWrapper.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="AP_Mgr.cpp">
-      <Filter>Source Files\Strategy</Filter>
+      <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Order.cpp">
+    <ClCompile Include="TriggerFactory.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
