--- a/src/AutoTrader/AutoTrader.vcxproj
+++ b/src/AutoTrader/AutoTrader.vcxproj
@@ -119,6 +119,7 @@
       <Command>xcopy "$(SolutionDir)lib\thostmduserapi.dll" $(OutputPath) /Y
 xcopy "$(SolutionDir)lib\thosttraderapi.dll" $(OutputPath) /Y
 xcopy "$(SolutionDir)lib\libmysql.dll" $(OutputPath) /Y
+xcopy "$(SolutionDir)src\AutoTrader\config_v2.json" $(OutputPath) /Y
 xcopy "$(SolutionDir)src\AutoTrader\config.json" $(OutputPath) /Y
 xcopy "$(SolutionDir)src\AutoTrader\config.ini" $(OutputPath) /Y</Command>
     </PostBuildEvent>
@@ -162,6 +163,14 @@ xcopy "$(SolutionDir)src\AutoTrader\config.ini" $(OutputPath) /Y</Command>
       <AdditionalDependencies>thostmduserapi.lib;thosttraderapi.lib;libmysql.lib;lib_json.lib;Common.lib;StrategyFramework.lib;libboost_system-vc120-mt-1_60.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(SolutionDir)\lib;$(OutDir);$(SolutionDir)boost_1_60_0\stage\lib</AdditionalLibraryDirectories>
     </Link>
+    <PostBuildEvent>
+      <Command>xcopy "$(SolutionDir)lib\thostmduserapi.dll" $(OutputPath) /Y
+xcopy "$(SolutionDir)lib\thosttraderapi.dll" $(OutputPath) /Y
+xcopy "$(SolutionDir)lib\libmysql.dll" $(OutputPath) /Y
+xcopy "$(SolutionDir)src\AutoTrader\config_v2.json" $(OutputPath) /Y
+xcopy "$(SolutionDir)src\AutoTrader\config.json" $(OutputPath) /Y
+xcopy "$(SolutionDir)src\AutoTrader\config.ini" $(OutputPath) /Y</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
