--- a/src/AutoTrader/AutoTrader.vcxproj
+++ b/src/AutoTrader/AutoTrader.vcxproj
@@ -180,8 +180,8 @@ xcopy "$(SolutionDir)src\AutoTrader\config.ini" $(OutputPath) /Y</Command>
     <ClInclude Include="..\include\ThostFtdcTraderApi.h" />
     <ClInclude Include="..\include\ThostFtdcUserApiDataType.h" />
     <ClInclude Include="..\include\ThostFtdcUserApiStruct.h" />
-    <ClInclude Include="Account.h" />
-    <ClInclude Include="AccountMgr.h" />
+    <ClInclude Include="ClientSession.h" />
+    <ClInclude Include="ClientSessionMgr.h" />
     <ClInclude Include="ActionProcessor.h" />
     <ClInclude Include="fifo_action_queue.h" />
     <ClInclude Include="InstrumentInfoMgr.h" />
@@ -204,8 +204,8 @@ xcopy "$(SolutionDir)src\AutoTrader\config.ini" $(OutputPath) /Y</Command>
     <ClInclude Include="remote_user_action.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Account.cpp" />
-    <ClCompile Include="AccountMgr.cpp" />
+    <ClCompile Include="ClientSession.cpp" />
+    <ClCompile Include="ClientSessionMgr.cpp" />
     <ClCompile Include="ActionProcessor.cpp" />
     <ClCompile Include="fifo_action_queue.cpp" />
     <ClCompile Include="InstrumentInfoMgr.cpp" />
