--- a/src/AutoTrader/config_v2.json
+++ b/src/AutoTrader/config_v2.json
@@ -17,45 +17,9 @@
       "Password":"wodemima"
    },
 
-   "AccountList":[
-      {
-         "BrokerID" : "9999",
-         "UserID"   : "021510",
-         "Password" : "wodemima",
-         "Instruments" : [
-            "rb1604"
-         ],
-         "Strategies" : [
-            0, 1, 2
-         ], 
-         "PositionControl" : [
-            0, 1
-         ]
-      },
-
-      {
-         "BrokerID" : "9999",
-         "UserID"   : "038775",
-         "Password" : "wodemima",
-         "Instruments" : [
-            "rb1604",
-            "rb1605"
-         ],
-         "Strategies" : [
-            0, 1, 4
-         ],
-         "PositionControl" : [
-            0
-         ]
-      }
-   ],
-
-   "StrategyList": [
-      "MACross",
-      "MACross,3,5",
-      "WMACross",
-      "AMACross",
-      "EMACross",
-      "MACrossBOLL"
-   ]
+   "MD_Accout":{
+      "BrokerID" : "9999",
+      "UserID" : "021510",
+      "Password" : "wodemima"
+   }
 }
