--- a/android_client/AndroidManifest.xml
+++ b/android_client/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:targetSdkVersion="19" />
 
     <application
+        android:name=".ClientSession"
         android:allowBackup="true"
         android:icon="@drawable/ic_pink"
         android:label="@string/app_name"
