--- a/android_client/AndroidManifest.xml
+++ b/android_client/AndroidManifest.xml
@@ -7,15 +7,15 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
-
+	<uses-permission  android:name="android.permission.INTERNET"/>
     <application
-        android:name=".ClientSession"
+        android:name=".MyApp"
         android:allowBackup="true"
         android:icon="@drawable/ic_pink"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Holo.NoActionBar" >
         <activity
-            android:name="com.android.futures.WelcomeActivity"
+            android:name=".LoginActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,7 +23,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.android.futures.MyFragmentActivity" />
+        <activity android:name=".MyFragmentActivity" />
+        <activity
+            android:name=".AccountActivity"
+            android:label="@string/title_activity_account" >
+        </activity>
     </application>
 
 </manifest>
