--- a/android_client/AndroidManifest.xml
+++ b/android_client/AndroidManifest.xml
@@ -16,16 +16,19 @@
         android:theme="@android:style/Theme.Holo.NoActionBar" >
         <activity
             android:name=".LoginActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >"
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MyFragmentActivity" />
+        <activity android:name=".MyFragmentActivity"
+            android:screenOrientation="landscape" />"
         <activity
             android:name=".AccountActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_account" >
         </activity>
     </application>
