Fix linux build (cmake) after split code to four parts

--- a/src/AutoTrader/CMakeLists.txt
+++ b/src/AutoTrader/CMakeLists.txt
@@ -1,39 +1,37 @@
 message(STATUS "AutoTrader cmake configuring")
+message(STATUS "BoostDIR : ${BOOST_DIR}/stage/lib")
 
 SET(EXECUTABLE_OUTPUT_PATH ${AUTOTRADE_SOURCE_DIR}/bin)
 
-SET(SRC_LIST	AutoTrader.cpp 
-			 	AP_Mgr.cpp 
-				BOLLTech.cpp
-				CommonUtils.cpp
-				config.cpp
-				DBWrapper.cpp
+SET(SRC_LIST	AP_Mgr.cpp
+			 	ActionProcessor.cpp 
+			 	AutoTrader.cpp 
+			 	ClientSession.cpp
+			 	ClientSessionMgr.cpp
 				InstrumentInfoMgr.cpp
-				KData.cpp
-				MATech.cpp
-				mdspi.cpp
-				mysqlwrapper.cpp
-				Order.cpp
-				PositionControl.cpp
 				RealTimeDataProcessor.cpp
 				RealTimeDataProcessorPool.cpp
-				stdafx.cpp
-				TechUtils.cpp
-				TickWrapper.cpp
+				Utils.cpp
+				fifo_action_queue.cpp
+				mdspi.cpp
 				tradespi.cpp
-				MACrossBOLLStrategy.cpp
-				MACrossBOLLTech.cpp
-				MACrossStratgy.cpp
-			 	AMACrossStratgy.cpp
-			 	EMACrossStratgy.cpp
-			 	WMACrossStratgy.cpp )
+				remote_server_action.cpp
+				remote_user_action.cpp
+				socket_server.cpp
+				socket_server_impl.cpp
+				socket_session.cpp
+				stdafx.cpp)
 
-INCLUDE_DIRECTORIES(${HEADER_INCLUDE_DIR} ${AUTOTRADE_SOURCE_DIR}/src/lib_json/include)
+INCLUDE_DIRECTORIES(${HEADER_INCLUDE_DIR} 
+					${AUTOTRADE_SOURCE_DIR}/src/lib_json/include 
+					${BOOST_DIR} 
+					${AUTOTRADE_SOURCE_DIR}/src/Common 
+					${AUTOTRADE_SOURCE_DIR}/src/StrategyFramework)
 
-LINK_DIRECTORIES(${LINK_LIB_DIR} ${EXECUTABLE_OUTPUT_PATH})
+LINK_DIRECTORIES(${LINK_LIB_DIR} ${EXECUTABLE_OUTPUT_PATH} ${BOOST_DIR}/stage/lib)
 
 ADD_EXECUTABLE(AutoTrader ${SRC_LIST})
 
-ADD_DEPENDENCIES(AutoTrader lib_json)
+ADD_DEPENDENCIES(AutoTrader lib_json Common StrategyFramework)
 
-TARGET_LINK_LIBRARIES(AutoTrader lib_json libmysql thostmduserapi thosttraderapi)
+TARGET_LINK_LIBRARIES(AutoTrader dl lib_json libmysql thostmduserapi thosttraderapi Common StrategyFramework boost_filesystem boost_system)
