--- a/src/StrategyFramework/CMakeLists.txt
+++ b/src/StrategyFramework/CMakeLists.txt
@@ -9,7 +9,7 @@ SET(SRC_LIST AP_Mgr.cpp
 		     TickWrapper.cpp
 		     TriggerFactory.cpp)
 
-INCLUDE_DIRECTORIES(${HEADER_INCLUDE_DIR} ${AUTOTRADE_SOURCE_DIR}/src/Common)
+INCLUDE_DIRECTORIES(${HEADER_INCLUDE_DIR} ${AUTOTRADE_SOURCE_DIR}/src/Common ${BOOST_DIR})
 
 LINK_DIRECTORIES(${EXECUTABLE_OUTPUT_PATH})
 
