--- a/android_client/.project
+++ b/android_client/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>javaapk.com-WelcomeActivity</name>
+	<name>AutoTrader_Client</name>
 	<comment></comment>
 	<projects>
 	</projects>
