--- a/android_client/AndroidManifest.xml
+++ b/android_client/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:targetSdkVersion="19" />
 
     <uses-permission android:name="android.permission.INTERNET" />
-
+	<uses-permission android:name="android.permission.VIBRATE"></uses-permission>
+	
     <application
         android:name=".MyApp"
         android:allowBackup="true"
