--- a/src/AutoTrader/AutoTrader.vcxproj
+++ b/src/AutoTrader/AutoTrader.vcxproj
@@ -105,7 +105,7 @@
       <PrecompiledHeader>Use</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_LIB;FAKE_MD;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <AdditionalIncludeDirectories>$(SolutionDir)include\;$(SolutionDir)src\lib_json\include\;$(SolutionDir)boost_1_60_0\;$(SolutionDir)src\Common\;$(SolutionDir)src\StrategyFramework\</AdditionalIncludeDirectories>
     </ClCompile>
