--- a/android_client/AndroidManifest.xml
+++ b/android_client/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.android.futures"
     android:versionCode="1"
-    android:versionName="V1.1.1025" >
+    android:versionName="V1.1.1026" >
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -14,6 +14,7 @@
     <application
         android:name=".MyApp"
         android:allowBackup="true"
+        android:largeHeap="true"
         android:icon="@drawable/ic_pink"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Holo.NoActionBar" >
