--- a/src/StrategyFramework/StrategyFramework.vcxproj.filters
+++ b/src/StrategyFramework/StrategyFramework.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="InstrumentInfoMgr.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PPMgr.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Order.cpp">
@@ -69,6 +72,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="InstrumentInfoMgr.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="PPMgr.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
