add update_instru as a util tool (3)- fix build on linux environment

--- a/src/StrategyFramework/CMakeLists.txt
+++ b/src/StrategyFramework/CMakeLists.txt
@@ -11,7 +11,10 @@ SET(SRC_LIST AP_Mgr.cpp
 		     TriggerFactory.cpp
 		     InstrumentInfoMgr.cpp)
 
-INCLUDE_DIRECTORIES(${HEADER_INCLUDE_DIR} ${AUTOTRADE_SOURCE_DIR}/src/Common ${BOOST_DIR})
+INCLUDE_DIRECTORIES(${HEADER_INCLUDE_DIR}
+					${AUTOTRADE_SOURCE_DIR}/src/Common
+					${AUTOTRADE_SOURCE_DIR}/src/lib_json/include
+					${BOOST_DIR})
 
 LINK_DIRECTORIES(${EXECUTABLE_OUTPUT_PATH})
 
