fix build & don't build AP_Mgr.cpp any more && fix warnings

--- a/src/StrategyFramework/CMakeLists.txt
+++ b/src/StrategyFramework/CMakeLists.txt
@@ -2,8 +2,7 @@ message(STATUS "StrategyFramework cmake configuring")
 
 SET(LIBRARY_OUTPUT_PATH ${AUTOTRADE_SOURCE_DIR}/bin)
 
-SET(SRC_LIST AP_Mgr.cpp 
-			 PPMgr.cpp 
+SET(SRC_LIST PPMgr.cpp 
 		     BOLLTech.cpp 
 		     KData.cpp
 		     Order.cpp
