add cancellorder test stg

--- a/src/MyStrategy2/CMakeLists.txt
+++ b/src/MyStrategy2/CMakeLists.txt
@@ -3,6 +3,7 @@ message(STATUS "MyStrategy2 cmake configuring")
 SET(LIBRARY_OUTPUT_PATH ${AUTOTRADE_SOURCE_DIR}/bin)
 
 SET(SRC_LIST BigProfitSmallLoseStrategy.cpp 
+						 TestCancelOrderStrategy.cpp
 			 Pos1Shou.cpp 
 			 mystrategy.cpp)
 
